--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,60 @@
-pkg-resources==0.0.0
+absl-py==0.13.0
+astor==0.8.1
+astunparse==1.6.3
+awkward0==0.15.5
+cached-property==1.5.2
+cachetools==4.2.2
+certifi==2021.5.30
+charset-normalizer==2.0.6
+cycler==0.10.0
+dataclasses==0.8
+flatbuffers==1.12
+gast==0.3.3
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+idna==3.2
+importlib-metadata==4.8.1
+joblib==1.0.1
+keras==2.6.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.4
+matplotlib==3.3.4
+numpy==1.19.5
+oauthlib==3.1.1
+opt-einsum==3.3.0
+pandas==1.1.5
+Pillow==8.3.2
+pkg_resources==0.0.0
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
+requests-oauthlib==1.3.0
+root-numpy==4.8.0
+rsa==4.7.2
+scikit-learn==0.24.2
+scipy==1.5.4
+six==1.15.0
+sklearn==0.0
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+threadpoolctl==2.2.0
+typing-extensions==3.7.4.3
+uproot3==3.14.4
+uproot3-methods==0.10.1
+urllib3==1.26.7
+Werkzeug==2.0.1
+wrapt==1.12.1
+zipp==3.5.0
